# twig

./: .clinerules  .clippy.toml  .gitignore  .insta.yaml  .mcp.json  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  BRANCH_TREE_STRUCTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURE_BRANCHES.md  MCP_SETUP.md  MIGRATING_FROM_ARGIT.md  Makefile  PLUGINS.md  PROGRESS.md  README.md  SHORT_TERM_IMPROVEMENTS.md  USER_STORIES.md  build.rs  clippy.toml  ruff.toml  rust-toolchain.toml  test-extension.js  twig
.cargo/: config.toml
.config/: nextest.toml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md  release-template.md
.skills/: README.md
docs/: CLI-REF.md  CLI-Reference.md  DIAMOND_RENDERING.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_ARCHITECTURE.md  README.md  completions.md  migrating_from_argit.md  shell-completions.md
no-worries/: Cargo.toml  README.md
no-worries/src/: lib.rs
openspec/: config.yaml  seeding.md
plugins/twig-flow/: Cargo.toml  README.md
plugins/twig-flow/src/: cli.rs  complete.rs  lib.rs  main.rs  switch.rs  tree.rs
plugins/twig-flow/tests/: integration.rs
plugins/twig-prune/: Cargo.toml
plugins/twig-prune/src/: cli.rs  lib.rs  main.rs
plugins/twig-prune/tests/: integration.rs
plugins/twig-update/: Cargo.toml
plugins/twig-update/src/: cli.rs  lib.rs  main.rs
src/: lib.rs  (+1 more)
twig-cli/: Cargo.toml
twig-cli/src/: auto_dependency_discovery.rs  clients.rs  complete.rs  consts.rs  diagnostics.rs  enhanced_errors.rs  git.rs  git_commands.rs  lib.rs  main.rs  plugin.rs  self_update.rs  test_enhanced_features.rs  tree_renderer.rs  user_defined_dependency_resolver.rs  user_experience.rs  utils.rs
twig-cli/src/cli/: adopt.rs  branch.rs  cascade.rs  commands.rs  commit.rs  completion.rs  config.rs  creds.rs  dashboard.rs  diagnostics.rs  fixup.rs  git.rs  github.rs  init.rs  jira.rs  mcp.rs  mod.rs  nodejs.rs  panic.rs  rebase.rs  rebase_common.rs  self_cmd.rs  self_update_cmd.rs  switch.rs  sync.rs  tidy.rs  tree.rs  treev2.rs  update.rs  view.rs  worktree.rs
twig-cli/src/cli/derive/: branch.rs  command.rs  completion.rs  creds.rs  dashboard.rs  diagnostics.rs  git.rs  github.rs  init.rs  jira.rs  mod.rs  panic.rs  switch.rs  sync.rs  tests.rs  tree.rs  view.rs  worktree.rs
twig-cli/src/completion/: mod.rs
twig-cli/src/config/: mod.rs
twig-cli/src/creds/: mod.rs
twig-cli/src/creds/platform/: mod.rs  unix.rs  windows.rs
twig-cli/src/creds/platform/windows/: helpers.rs
twig-cli/src/diagnostics/: mod.rs
twig-cli/src/fixup/: commit_collector.rs  creator.rs  mod.rs  scorer.rs  selector.rs  selector_ratatui.rs
twig-cli/src/git/: mod.rs
twig-cli/src/plugin/: mod.rs  platform.rs
twig-cli/src/repo_state/: mod.rs
twig-cli/src/self_update/: mod.rs  unix.rs  windows.rs
twig-cli/src/snapshots/: twig_cli__tree_renderer__tests__basic_tree.snap  twig_cli__tree_renderer__tests__tree_with_cross_references.snap  twig_cli__tree_renderer__tests__tree_with_deep_nesting.snap  twig_cli__tree_renderer__tests__tree_with_deep_nesting.snap.new  twig_cli__tree_renderer__tests__tree_with_diamond.snap  twig_cli__tree_renderer__tests__tree_with_github_pr_only.snap  twig_cli__tree_renderer__tests__tree_with_jira_and_github.snap  twig_cli__tree_renderer__tests__tree_with_jira_issue.snap  twig_cli__tree_renderer__tests__tree_with_max_depth.snap  twig_cli__tree_renderer__tests__tree_with_multiple_roots.snap
twig-cli/src/state/: mod.rs
twig-cli/src/utils/: mod.rs  output.rs  platform.rs
twig-cli/src/worktree/: mod.rs
twig-cli/tests/: basic_test.rs  batch_operations_test.rs  credential_management_test.rs  simple_test.rs  xdg_override_test.rs
twig-cli/tests/test_helpers/: mod.rs
twig-core/: Cargo.toml
twig-core/src/: clients.rs  complete.rs  config.rs  consts.rs  diamond_detector.rs  git.rs  github.rs  jira_parser.rs  lib.rs  nodejs.rs  output.rs  plugin.rs  prompts.rs  state.rs  text.rs  tree_renderer.rs  url.rs  user_defined_dependency_resolver.rs  utils.rs
twig-core/src/creds/: mod.rs  netrc.rs
twig-core/src/creds/platform/: mod.rs  windows.rs
twig-core/src/creds/platform/windows/: helpers.rs
twig-core/src/flow/: mod.rs  switch.rs
twig-core/src/git/: branches.rs  detection.rs  graph.rs  mod.rs  renderer.rs  renderer_config.rs  repository.rs  switch.rs  tree.rs
twig-core/src/git/snapshots/: twig_core__git__renderer__tests__flow_renderer__custom_schema.snap  twig_core__git__renderer__tests__flow_renderer__default_schema.snap  twig_core__git__renderer__tests__flow_renderer__max_width_45.snap  twig_core__git__renderer__tests__flow_renderer__max_width_60.snap  twig_core__git__renderer__tests__flow_renderer__no_header.snap  twig_core__git__renderer__tests__flow_renderer__placeholders.snap
twig-core/src/snapshots/: twig_core__tree_renderer__tests__basic_tree.snap  twig_core__tree_renderer__tests__tree_with_cross_references.snap  twig_core__tree_renderer__tests__tree_with_deep_nesting.snap  twig_core__tree_renderer__tests__tree_with_diamond.snap  twig_core__tree_renderer__tests__tree_with_github_pr_only.snap  twig_core__tree_renderer__tests__tree_with_jira_issue.snap  twig_core__tree_renderer__tests__tree_with_max_depth.snap  twig_core__tree_renderer__tests__tree_with_multiple_roots.snap
twig-flow/: Cargo.toml
twig-flow/src/: main.rs
twig-gh/: Cargo.toml
twig-gh/src/: auth.rs  client.rs  consts.rs  lib.rs  models.rs  utils.rs
twig-gh/src/endpoints/: checks.rs  issues.rs  mod.rs  pulls.rs  users.rs
twig-gh/src/endpoints/tests/: checks_test.rs  pulls_test.rs  users_test.rs
twig-jira/: Cargo.toml
twig-jira/src/: auth.rs  client.rs  consts.rs  lib.rs  models.rs
twig-jira/src/endpoints/: issues.rs  mod.rs  transitions.rs
twig-jira/src/endpoints/tests/: issues_test.rs  transitions_test.rs
twig-mcp/: Cargo.toml  README.md
twig-mcp/src/: context.rs  lib.rs  main.rs  protocol.rs  resources.rs  server.rs  tools.rs  types.rs
twig-mcp/src/tools/: github.rs  jira.rs  local.rs  mod.rs
twig-test-utils/: Cargo.toml
twig-test-utils/src/: config.rs  env.rs  git.rs  home.rs  lib.rs  netrc.rs
(+1217 files in other folders)
