[workspace]
members = [
    "no-worries",
    "twig-cli",
    "twig-core",
    "twig-gh",
    "twig-jira",
    "twig-test-utils",
    "plugins/twig-flow",
]
exclude = [
    "/.github",
    "/.twig",
    "/ref",
    "/examples",
]
default-members = ["twig-cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Edward Jones <e@eddie.land>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eddieland/twig"
homepage = "https://github.com/eddieland/twig"
description = "A Git-based developer productivity tool that enhances workflows by integrating git repository management with Jira issue tracking and GitHub pull request workflows"
keywords = ["git", "productivity", "jira", "github", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package]
name = "twig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
twig-cli = { path = "twig-cli" }

[dev-dependencies]
twig-test-utils = { path = "twig-test-utils" }
twig-core = { path = "twig-core" }
anyhow = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
git2 = { version = "0.20", features = ["https"] }
open = "5.3"
regex = "1.12"
thiserror = "2"

# CLI and UI dependencies
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.15.11"
dialoguer = "0.11.0"
emojis = "0.6"
indicatif = "0.17"
owo-colors = { version = "4.2", features = ["supports-colors"] }
tabled = "0.20"

# Interactive UI
skim = "0.18"
ratatui = "0.29"
crossterm = "0.29"
nucleo = "0.5"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async and networking
reqwest = { version = "0.12", features = ["json", "native-tls", "blocking"], default-features = false }
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
url = "2.5"

# Testing utilities
assert_cmd = "2.0"
predicates = "3.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Windows-specific dependencies
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

# Testing dependencies
insta = "1.43"
tempfile = "3.23"
wiremock = "0.6.5"

[target.'cfg(windows)'.dependencies]
# Platform-specific git2 features for Windows
git2 = { version = "0.20", features = ["vendored-openssl"] }

[profile.release]
opt-level = 2
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization

# Fast profile for Windows CI test builds - prioritizes speed over optimization
[profile.ci-windows]
inherits = "dev"
opt-level = 0          # No optimization for fastest compilation
lto = false            # No LTO for fastest compilation
codegen-units = 256    # Maximum parallel compilation
debug = false          # No debug info to keep artifacts small

# Optimized profile for Windows release builds
[profile.release-windows]
inherits = "release"
opt-level = 1          # Reduce from 2 to 1 for faster compilation
lto = "thin"           # Use thin LTO instead of full LTO
codegen-units = 16     # Increase from 1 to enable parallel compilation
debug = false          # Ensure no debug info

# Warn on these additional lints to keep hygiene consistent across the workspace
[lints.clippy]
# --- Panic & unwrap safety ---
unwrap_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"

# --- Result / Option correctness ---
map_err_ignore = "warn"
bind_instead_of_map = "warn"
map_flatten = "warn"

# --- Logging & debugging hygiene ---
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

# --- Correctness & readability ---
inefficient_to_string = "warn"
shadow_unrelated = "warn"
match_bool = "warn"
needless_borrow = "warn"
needless_lifetimes = "warn"
useless_conversion = "warn"
undocumented_unsafe_blocks = "warn"

# --- API Hygiene ---
missing_const_for_fn = "warn"
redundant_pub_crate = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
