[package]
name = "no-worries"
description = "A custom panic handler for enhanced error reporting and graceful failure handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "no_worries"
path = "src/lib.rs"

[dependencies]
# Core dependencies
backtrace = "0.3.76"
chrono = { workspace = true }
is-terminal = "0.4.17"

# UI dependencies
owo-colors = { workspace = true }
