[package]
name = "twig-core"
description = "Core library for twig plugins providing configuration structures and utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "twig_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
directories.workspace = true
git2.workspace = true
open.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twig-gh = { path = "../twig-gh" }
twig-jira = { path = "../twig-jira" }
url.workspace = true
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Output formatting
owo-colors.workspace = true
emojis.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
twig-test-utils = { path = "../twig-test-utils" }

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
