[package]
name = "twig-gh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "GitHub API client for twig"

[dependencies]
anyhow.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
wiremock.workspace = true
tokio = { workspace = true, features = ["full"] }
