[package]
name = "twig-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Twig flow plugin providing branch visualization and switching workflows"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
dialoguer = { workspace = true }
directories = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
twig-core = { path = "../../twig-core" }
twig-jira = { path = "../../twig-jira" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
twig-test-utils = { path = "../../twig-test-utils" }
