[package]
name = "twig-prune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Twig plugin to delete local branches whose GitHub PRs have been merged or Jira issues are done"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
console = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
git2 = { workspace = true }
owo-colors = { workspace = true }
twig-core = { path = "../../twig-core" }
twig-gh = { path = "../../twig-gh" }
twig-jira = { path = "../../twig-jira" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
twig-test-utils = { path = "../../twig-test-utils" }
